--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catat-uangku",
-  "version": "1.1.3",
+  "version": "1.1.11",
   "private": true,
   "dependencies": {
     "classnames": "^2.3.2",
@@ -36,7 +36,8 @@
     "start": "react-scripts start",
     "build:test": "GENERATE_SOURCEMAP=false react-scripts build",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "prettier:write": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,scss,html,md,mdx,json}\" --config ./.prettierrc --ignore-path ./.prettierignore"
+    "prettier:write": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,scss,html,md,mdx,json}\" --config ./.prettierrc --ignore-path ./.prettierignore",
+    "commit": "node commit"
   },
   "eslintConfig": {
     "extends": [
