--- a/package.json
+++ b/package.json
@@ -1,46 +1,22 @@
 {
   "name": "catat-uang",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "concurrently \"yarn dev:server\" \"yarn dev:client\"",
+    "dev:server": "yarn --cwd server dev",
+    "dev:client": "yarn --cwd client dev",
+    "build": "yarn build:client && yarn build:server",
+    "build:server": "yarn --cwd server build",
+    "build:client": "yarn --cwd client build",
+    "start": "yarn start:server",
+    "start:server": "yarn --cwd server start"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "axios": "^1.11.0",
-    "class-variance-authority": "^0.7.1",
-    "lucide-react": "^0.539.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-is": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "recharts": "^3.1.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^24.3.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "clsx": "^2.1.1",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "concurrently": "^9.2.0"
   }
 }
