--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:server": "yarn --cwd server build",
     "build:client": "yarn --cwd client build",
     "start": "yarn start:server",
-    "start:server": "yarn --cwd server start"
+    "start:server": "yarn --cwd server start",
+    "copy-client": "rm -rf server/client && cp -r client/dist server/client"
   },
   "keywords": [],
   "author": "",
