--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "migrate-dev": "npx prisma migrate dev --name",
-    "build": "tsc && tsc-alias",
+    "clean": "rm -rf dist client",
+    "build": "yarn clean && tsc && tsc-alias",
     "start": "node dist/index.js",
     "migrate-prod": "npx prisma migrate deploy"
   },
