--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:client": "yarn --cwd client build",
     "copy-client": "rm -rf server/client && cp -r client/dist server/client",
     "build": "yarn build:client && yarn build:server && yarn copy-client",
+    "start:server": "yarn --cwd server start",
     "start": "yarn start:server"
   },
   "keywords": [],
