--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "4.21.2",
     "google-auth-library": "^10.2.1",
     "http-errors": "^2.0.0",
     "joi": "^18.0.0",
@@ -30,7 +30,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "4.17.23",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "eslint": "^9.33.0",
