--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "migrate-dev": "npx prisma migrate dev --name",
     "clean": "rm -rf dist client",
     "build": "yarn clean && prisma generate && tsc && tsc-alias",
@@ -23,7 +23,8 @@
     "google-auth-library": "^10.2.1",
     "http-errors": "^2.0.0",
     "joi": "^18.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "4.17.23",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
     "eslint": "^9.33.0",
     "globals": "^16.3.0",
