--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,15 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+  "version": 2,
+  "builds": [
+    { "src": "api/index.ts", "use": "@vercel/node" },
+    { "src": "client/dist/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/index.ts" },
+    { "src": "/assets/(.*)", "dest": "/client/dist/assets/$1" },
+    { "src": "/favicon.ico", "dest": "/client/dist/favicon.ico" },
+    { "src": "/(.*)", "dest": "/client/dist/index.html" }
+  ],
+  "installCommand": "yarn install:all",
+  "buildCommand": "yarn build"
+}
