--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,11 @@
 {
   "name": "catat-uang",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && node generate-sw.js && cp -r offline.html dist/",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -44,6 +44,7 @@
     "tailwindcss": "^4.1.12",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "workbox-build": "^7.3.0"
   }
 }
