--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   ],
   "author": {
     "name": "Doni Darmawan",
-    "email": "jane.smith@example.com",
+    "email": "darmawandoni6@gmail.com",
     "url": "https://darmawan.netlify.app/"
   },
   "license": "ISC",
