--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "1.2.0",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
@@ -8,7 +9,8 @@
     "clean": "rm -rf dist client",
     "build": "yarn clean && prisma generate && tsc && tsc-alias",
     "start": "NODE_ENV=production node dist/index.js",
-    "migrate-prod": "npx prisma migrate deploy"
+    "migrate-prod": "npx prisma migrate deploy",
+    "lint": "eslint src --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +38,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
     "eslint": "^9.33.0",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
