--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "clean": "rm -rf dist client",
     "build": "yarn clean && prisma generate && tsc && tsc-alias",
     "start": "NODE_ENV=production node dist/index.js",
-    "migrate-prod": "npx prisma migrate deploy"
+    "migrate-prod": "npx prisma migrate deploy",
+    "lint": "eslint src --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
     "eslint": "^9.33.0",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
